# AutoFTIR-1

./: .dockerignore  .env.example  .gitignore  1.md  Dockerfile  README.md  app.py  docker-compose.dev.yml  docker-compose.https.yml  docker-compose.yml  plan.md  plot_测试-1.py  requirements.txt  run_test-1.bat  启动App.bat  启动后端.bat  测试-1.py  测试-FTIR-1.CSV  测试-FTIR-2.CSV  测试-FTIR-3.CSV  测试-XRD.txt
api/: __init__.py  config.py  main.py
api/services/: __init__.py  ai_service.py  chart_service.py
backend/: .env.example  Dockerfile  __init__.py  main.py  requirements.txt
backend/api/: __init__.py  main.py
backend/core/: __init__.py  auth.py  config.py  database.py  exceptions.py
core/: __init__.py
frontend/: Dockerfile.dev  __init__.py  api_client.py  constants.py  index.html  package.json  streamlit_app.py  tailwind.config.js  tsconfig.json  vite.config.ts
modules/: __init__.py  getpic_adapter.py  peaks.py  plotter.py  reader.py  vision_agent.py
modules/getpic/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
modules/getpic/core/: __init__.py  config.py  main.py  orchestrator.py  types.py
modules/getpic/mcp_modules/: __init__.py
modules/getpic/mcp_modules/doc_parser/: __init__.py
modules/getpic/mcp_modules/img_processor/: __init__.py  filters.py  tool.py
modules/getpic/mcp_modules/vision_agent/: __init__.py  prompts.py  tool.py  vlm_client.py
modules/getpic/schema/: __init__.py  chart_standard.py  mcp_protocol.py
nginx/: default.conf.https
scripts/: test_backend_analyze.py
templates/: ftir_template.py
utils/: peak_finder.py
(+56 files in other folders)
